--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"ZukaChan", 
-"NomorOwner":"6281398860278",
+"NamaBot":"Alam 🌱", 
+"NomorOwner":"6285888083107",
 "NamaOwner":"Helgaa", 
 "HelKey": ""
 }
